sizing, cards, formspree.io int

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item disabled" href="#">Capabilities</a>
+              <a class="dropdown-item disabled" href="CAPABILITY STATEMENT.pdf"download="cs.pdf">Capabilities</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
               <a class="dropdown-item disabled" href="#">Line Card</a>
@@ -101,10 +101,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <form class="" action="index.html" method="post">
-                <input type="text" name="" value="" placeholder="Email">
-                <input type="text" name="" value="" placeholder="Company">
-                <input type="text" name="" value="" placeholder="Name">
+              <form class="" action="https://formspree.io/mvowkdyg" method="post">
+                <input type="text" name="_replyto" value="" placeholder="Email">
+                <input type="text" name="Company" value="" placeholder="Company">
+                <input type="text" name="Customer Name" value="" placeholder="Name">
                 <br>
                 <a href="#pl"onclick="addField()">Add a Field</a>
                 <br>
@@ -172,23 +172,53 @@
     </div>
     <div class="container-fluid">
       <div class="row">
+
+        <!-- CARD -->
         <div class="col-md-3 ic">
-          <i class="fa fa-building-o fa-4x faic" aria-hidden="true"></i>
-          <li>Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
-        </div>
-        <div class="col-md-3 ic">
-          <i class="fa fa-users fa-4x faic" aria-hidden="true"></i>
-          <li>Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
-        </div>
-        <div class="col-md-3 ic">
-          <i class="fa fa-desktop fa-4x faic" aria-hidden="true"></i>
-          <li>Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
-        </div>
-        <div class="col-md-3 ic">
-          <i class="fa fa-handshake-o fa-4x faic" aria-hidden="true"></i>
-          <li>Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
+          <div class="card-outer">
+            <div class="card-icon">
+                <i class="fa fa-building-o fa-4x faic" aria-hidden="true"></i>
+            </div>
+            <div class="card-par">
+              <li><strong>Full-line stocking distributor</strong> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
+            </div>
+          </div>
         </div>
 
+        <!-- CARD -->
+        <div class="col-md-3 ic">
+          <div class="card-outer">
+            <div class="card-icon">
+              <i class="fa fa-users fa-4x faic" aria-hidden="true"></i>
+            </div>
+            <div class="card-par">
+              <li><strong>Long-term</strong> inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="col-md-3 ic">
+          <div class="card-outer">
+            <div class="card-icon">
+              <i class="fa fa-desktop fa-4x faic" aria-hidden="true"></i>
+            </div>
+            <div class="card-par">
+              <li><strong>Experienced</strong> personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="col-md-3 ic">
+          <div class="card-outer">
+            <div class="card-icon">
+              <i class="fa fa-handshake-o fa-4x faic" aria-hidden="true"></i>
+            </div>
+            <div class="card-par">
+              <li><strong>Long-term</strong> trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
+            </div>
+        </div>
       </div>
 
     </div>
@@ -196,21 +226,21 @@
       <div class="container">
         <h1 class="display-4"></h1>
         <div id="carouselExampleControls" class="carousel slide" data-interval="3000"data-ride="carousel">
-          <div class="carousel-inner" style=" width:100%; height: 200px !important;">
+          <div class="carousel-inner" style=" width:100%; height: 250px !important;">
             <div class="carousel-item active">
               <div class="d-block w-100">
-                <h3>Affiliations</h3><br>
-                <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="100h3px"></a>
-                <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="100h3px"></a>
-                <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="100h3px"></a>
+                <h1>Affiliations</h1><br>
+                <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="150h3px"></a>
+                <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="150h3px"></a>
+                <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="150h3px"></a>
               </div>
             </div>
             <div class="carousel-item">
               <div class="d-block w-100">
-                <h3>Certifications</h3><br>
-                <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="100h3px"></a>
-                <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
-                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="100h3px"></a>
+                <h1>Certifications</h1><br>
+                <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="150h3px"></a>
+                <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="120h3px"></a>
+                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="150h3px"></a>
 
               </div>
             </div>
