--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="row end-area">
 
         <div class="col-xl-3 text-center bottom">
-          <img src="imgs/laner.png" style="height:200px;"alt="">
+          <img src="imgs/Laner.png" style="height:200px;"alt="">
           <br>
           SERVING QUALITY DRIVEN BULDERS SINCE 1984
 
