--- a/index.html
+++ b/index.html
@@ -280,12 +280,10 @@
 
 
     <div class="end">
-
-
     <div class="container-fluid">
       <div class="row end-area">
 
-        <div class="col-xl-3 text-center bottom">
+        <div class="col-xl-4 text-center bottom">
           <img src="imgs/Laner.png" style="height:200px;"alt="">
           <br>
           SERVING QUALITY DRIVEN BULDERS SINCE 1984
@@ -297,7 +295,7 @@
           <br>
         </div>
 
-        <div class="col-xl-3 text-center bottom">
+        <div class="col-xl-4 text-center bottom">
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
           1310 S 51st St Richmond, CA, 94804
@@ -310,13 +308,8 @@
            Mon-Fri, 7am-4:30pm
         </div>
 
-        <div class="col-xl-3 bottom">
-          <div id="map"></div>
-          <script src="scripts/le.js"></script>
-          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
-          </script>
-        </div>
-        <div class="col-xl-3 text-center bottom">
+
+        <div class="col-xl-4 text-center bottom">
           <div class="contact">
             <i class="fa fa-address-card" aria-hidden="true"></i>
             <h1>Contact Us</h1>
@@ -332,6 +325,16 @@
 
 
 
+
+
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-xl-4 bottom">
+          <div id="map"></div>
+          <script src="scripts/le.js"></script>
+          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
+          </script>
+        </div>
 
       </div>
     </div>
