border fixes, bug fix

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
         </div>
       </div>
-
+    </div>
     </div>
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
@@ -283,7 +283,7 @@
     <div class="container-fluid">
       <div class="row end-area">
 
-        <div class="col-xl-4 text-center bottom">
+        <div class="col-lg-4 text-center bottom">
           <img src="imgs/Laner.png" style="height:200px;"alt="">
           <br>
           SERVING QUALITY DRIVEN BULDERS SINCE 1984
@@ -295,7 +295,7 @@
           <br>
         </div>
 
-        <div class="col-xl-4 text-center bottom">
+        <div class="col-lg-4 text-center bottom">
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
           1310 S 51st St Richmond, CA, 94804
@@ -309,7 +309,7 @@
         </div>
 
 
-        <div class="col-xl-4 text-center bottom">
+        <div class="col-lg-4 text-center bottom">
           <div class="contact">
             <i class="fa fa-address-card" aria-hidden="true"></i>
             <h1>Contact Us</h1>
@@ -329,7 +329,7 @@
 
       </div>
       <div class="row justify-content-center">
-        <div class="col-xl-4 bottom">
+        <div class="col-lg-6 bottom">
           <div id="map"></div>
           <script src="scripts/le.js"></script>
           <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL-HnlX1k6An84367U8lV8emmtgDqDv0s&callback=initMap">
@@ -344,7 +344,6 @@
 
 
     <footer>
-
       <h6>Powered by <a href="https://eliascz.dev">Eliascz.dev</a></h6>
     </footer>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
