--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item disabled" href="CAPABILITY STATEMENT.pdf"download="cs.pdf">Capabilities</a>
+              <a class="dropdown-item" href="CAPABILITY STATEMENT.pdf"download="cs.pdf">Capabilities</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
               <a class="dropdown-item disabled" href="#">Line Card</a>
@@ -81,6 +81,7 @@
 
             </div>
           </li>
+          <a class="nav-item mobl">Call / Text (510) 215-5100</a>
           <!-- END NAV DROPDOWN -->
 
         </div>
