--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               More
             </a>
             <div class="dropdown-menu disabled" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item disabled" href="#">Corporate Social Responsibility</a>
+              <a class="dropdown-item"onclick=loadDoc()>Corporate Social Responsibility</a>
               <a class="dropdown-item disabled" href="#">Projects & Customers</a>
               <a class="dropdown-item disabled" href="#">News + Media</a>
 
@@ -166,7 +166,7 @@
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row justify-content-center" id="dyn">
 
         <!-- CARD -->
         <div class="col-md-3 ic">
