--- a/index.html
+++ b/index.html
@@ -69,18 +69,6 @@
               <a class="dropdown-item disabled" href="#">Line Card</a>
             </div>
           </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              More
-            </a>
-            <div class="dropdown-menu disabled" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item"onclick=loadDoc()>Corporate Social Responsibility</a>
-              <a class="dropdown-item disabled" href="#">Projects & Customers</a>
-              <a class="dropdown-item disabled" href="#">News + Media</a>
-
-            </div>
-          </li>
           <a class="nav-item mobl">Call / Text (510) 215-5100</a>
           <!-- END NAV DROPDOWN -->
 
@@ -124,7 +112,6 @@
                   <option value="Customer_account">Customer Account</option>
                   <option value="Guest">Guest</option>
                 </select>
-
                 <button type="submit" class="btn1"name="button">Submit</button>
               </form>
               </div>
@@ -137,7 +124,7 @@
 
     <div class="container sec1 blur">
       <div class="row blur">
-        <div class="col-md-6 col-centered">
+        <div class="col-md-6 col-centered est">
           <h3>Established in 1984,</h3>
           Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
@@ -175,6 +162,16 @@
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Corporate Social Responsibility</h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <div class="col-md-6">
+          <h3>News & Media</h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
       <div class="row justify-content-center" id="dyn">
 
         <!-- CARD -->
@@ -230,7 +227,7 @@
       <div class="container">
         <h1 class="display-4"></h1>
         <div id="carouselExampleControls" class="carousel slide" data-interval="3000"data-ride="carousel">
-          <div class="carousel-inner" style=" width:100%; height: 250px !important;">
+          <div class="carousel-inner" style=" width:100%; height: 250px">
             <div class="carousel-item active">
               <div class="d-block w-100">
                 <h1>Affiliations</h1><br>
@@ -294,8 +291,8 @@
 
           <br>
           <br>
-          <a href="#" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
-          <a href="#" class="fa fa-rss fa-2x" aria-hidden="true"></a>
+          <a href="#" class="fa fa-linkedin fa-2x ic3" aria-hidden="true"></a>
+          <a href="#" class="fa fa-rss fa-2x ic3" aria-hidden="true"></a>
           <br>
         </div>
 
@@ -311,7 +308,8 @@
           <h5>Hours</h5>
            Mon-Fri, 7am-4:30pm
            <br>
-           <a onclick=loadDoc2()>Map</a>
+           <i class="fa fa-map-marker"></i>
+           <a class="map-link"onclick=loadDoc2()>Map</a>
         </div>
 
 
