js changes, color pallete changes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           <li>Will Call pickup available.</li>
           <li>Orders can be placed over the phone, via email and by texting our landline (510) 215-5100</li>
           <li>Modified Hours of Operation:</li>
-          <ul>
-            <li>Monday thru Friday: 7AM-3PM</li>
-          </ul>
+          <li>Monday thru Friday: 7AM-3PM</li>
         </ul>
         We thank you for your cooperation and understanding during these uncertain times.
 
@@ -91,7 +89,7 @@
           <div class="row">
             <div class="col-md-6">
               <form class="order-form-vis" action="https://formspree.io/mvowkdyg" method="post">
-                <input type="text" class="order-field" name="_replyto" value="" placeholder="Email">
+                <input type="text" class="order-field" name="Email Address" value="" placeholder="Email">
                 <input type="text" class="order-field"name="Company" value="" placeholder="Company">
                 <input type="text" class="order-field"name="Customer Name" value="" placeholder="Name">
                 <br>
@@ -158,20 +156,11 @@
 
     <!-- Third Page/Section, affils + certs -->
     <div class="scroll2 blur"></div>
-    <div class="about-us"id="about">
+    <div class="about-us big"id="about">
       <h1>ABOUT US</h1>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Corporate Social Responsibility</h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-        <div class="col-md-6">
-          <h3>News & Media</h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
+    <div class="container-fluid big">
+
       <div class="row justify-content-center" id="dyn">
 
         <!-- CARD -->
@@ -222,6 +211,18 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Corporate Social Responsibility</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <div class="col-md-6">
+        <h3>News & Media</h3>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
     </div>
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
