--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
           <div class="card-outer">
             <div class="card-icon">
                 <i class="fa fa-building-o fa-4x faic" aria-hidden="true"></i>
+                <hr>
             </div>
             <div class="card-par">
               <li><strong>Full-line stocking distributor</strong> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
@@ -180,6 +181,7 @@
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-users fa-4x faic" aria-hidden="true"></i>
+              <hr>
             </div>
             <div class="card-par">
               <li><strong>Long-term</strong> inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
@@ -192,6 +194,7 @@
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-desktop fa-4x faic" aria-hidden="true"></i>
+              <hr>
             </div>
             <div class="card-par">
               <li><strong>Experienced</strong> personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
@@ -204,6 +207,7 @@
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-handshake-o fa-4x faic" aria-hidden="true"></i>
+              <hr>
             </div>
             <div class="card-par">
               <li><strong>Long-term</strong> trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
@@ -212,12 +216,12 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
+    <div class="row justify-content-center">
+      <div class="col-md-4 xtr">
         <h3>Corporate Social Responsibility</h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4 xtr">
         <h3>News & Media</h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
