--- a/index.html
+++ b/index.html
@@ -290,15 +290,17 @@
       <div class="row end-area">
 
         <div class="col-lg-4 text-center bottom">
+          <div class="final-card">
+            <div class="final-card-inner">
+
           <img src="imgs/Laner.png" style="height:200px;"alt="">
           <br>
-          SERVING QUALITY DRIVEN BULDERS SINCE 1984
-
-          <br>
-          <br>
+          <strong> <i>SERVING QUALITY DRIVEN BULDERS SINCE 1984</i> </strong><hr>
           <a href="#" class="fa fa-linkedin fa-2x ic3" aria-hidden="true"></a>
           <a href="#" class="fa fa-rss fa-2x ic3" aria-hidden="true"></a>
           <br>
+          </div>
+          </div>
         </div>
 
         <div class="col-lg-4 text-center bottom"id=majax>
