--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                   <option value="Customer_account">Customer Account</option>
                   <option value="Guest">Guest</option>
                 </select>
+                <label>
+                 Upload an attachment:
+                 <input type="file" name="upload">
+               </label>
+
                 <button type="submit" class="btn1"name="button">Submit</button>
               </form>
               </div>
