--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Local Electrical Supply Company">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Laner Electric Supply</title>
   </head>
   <body>
@@ -53,7 +55,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#two">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#about">About</a>
-          <a class="nav-item nav-link" href="#">Products</a>
+          <a class="nav-item nav-link" href="#">Projects</a>
 
           <!-- NAV DROPDOWN -->
           <li class="nav-item dropdown">
@@ -127,7 +129,7 @@
 
     <div class="container sec1 blur">
       <div class="row blur">
-        <div class="col-md-6 col-centered est">
+        <div data-aos="fade-up"class="col-md-6 col-centered est">
           <h3>Established in 1984,</h3>
           Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
@@ -140,7 +142,7 @@
           </div>
 
         </div>
-        <div class="col-md-6 col-centered">
+        <div data-aos="fade-up" class="col-md-6 col-centered">
           <div class="login">
             <h1 id="ext">Extranet Login</h1>
             <form class="" action="#" method="post">
@@ -169,7 +171,7 @@
       <div class="row justify-content-center" id="dyn">
 
         <!-- CARD -->
-        <div class="col-md-3 ic">
+        <div data-aos="zoom-in-down"class="col-md-3 ic">
           <div class="card-outer">
             <div class="card-icon">
                 <i class="fa fa-building-o fa-4x faic" aria-hidden="true"></i>
@@ -182,7 +184,7 @@
         </div>
 
         <!-- CARD -->
-        <div class="col-md-3 ic">
+        <div data-aos="zoom-in-up"class="col-md-3 ic">
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-users fa-4x faic" aria-hidden="true"></i>
@@ -195,7 +197,7 @@
         </div>
 
         <!-- CARD -->
-        <div class="col-md-3 ic">
+        <div data-aos="zoom-in-down"class="col-md-3 ic">
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-desktop fa-4x faic" aria-hidden="true"></i>
@@ -208,7 +210,7 @@
         </div>
 
         <!-- CARD -->
-        <div class="col-md-3 ic">
+        <div data-aos="zoom-in-up"class="col-md-3 ic">
           <div class="card-outer">
             <div class="card-icon">
               <i class="fa fa-handshake-o fa-4x faic" aria-hidden="true"></i>
@@ -228,11 +230,100 @@
       </div>
       <div class="col-md-4 xtr">
         <h3>News & Media</h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="news_over">
+          <div class="article">
+            <h4>A headline</h4>
+            <p>Some text about headline. <br>mm/dd/yyyy</p>
+            <a href="#0">more..</a>
+            <hr>
+          </div>
+
+          <div class="article">
+            <h4>A headline</h4>
+            <p>Some text about headline. <br>mm/dd/yyyy</p>
+            <a href="#0">more..</a>
+            <hr>
+          </div>
+
+          <div class="article">
+            <h4>A headline</h4>
+            <p>Some text about headline. <br>mm/dd/yyyy</p>
+            <a href="#0">more..</a>
+            <hr>
+          </div>
+
+          <div class="article">
+            <h4>A headline</h4>
+            <p>Some text about headline. <br>mm/dd/yyyy</p>
+            <a href="#0">more..</a>
+            <hr>
+          </div>
+
+          <div class="article">
+            <h4>A headline</h4>
+            <p>Some text about headline. <br>mm/dd/yyyy</p>
+            <a href="#0">more..</a>
+            <hr>
+          </div>
+
+        </div>
       </div>
     </div>
 
     </div>
+
+    <div class="project-section">
+
+      <h1>Projects</h1>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 1</h4>
+            <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 2</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 3</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 4</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+      </div>
+      <div data-aos="flip-left"class="row justify-content-center">
+        <div class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 5</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 6</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 7</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+        <div data-aos="flip-left"class="col-md-2 project-card">
+          <img src="projects/Proj1.jpg" alt="">
+          <h4>Project 8</h4>
+          <p>Some text about project xyz. Completed in 20XX</p>
+        </div>
+      </div>
+    </div>
+    </div>
+
+
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
         <h1 class="display-4"></h1>
@@ -268,9 +359,10 @@
       </div>
     </div>
 
+
+
     <!-- Fourth page/section Google Maps Api and Contactus form -->
     <div class="scroll3"></div>
-
 
     <div class="container-fluid Subscribe">
       <div class="row justify-content-center">
@@ -344,11 +436,16 @@
 
 
     <footer>
-      <h6>Powered by <a href="https://eliascz.dev">Eliascz.dev</a></h6>
+      <strong><i>Powered by <a href="https://eliascz.dev">Eliascz.dev</a></i></strong>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="scripts/main.js"type="text/javascript"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
