--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
     <div class="container-fluid Subscribe">
       <div class="row justify-content-center">
-        <div class="col-md-4 text-center">
+        <div data-aos="fade-up-left"class="col-md-4 text-center">
           <div class="sub-inner">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
             <h1>Subscribe to our newsletter!</h1>
@@ -383,24 +383,11 @@
 
 
     <div class="end">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row end-area">
 
-        <div class="col-lg-4 text-center bottom">
-          <div class="final-card">
-            <div class="final-card-inner">
 
-          <img src="imgs/Laner.png" style="height:200px;"alt="">
-          <br>
-          <strong> <i>SERVING QUALITY DRIVEN BULDERS SINCE 1984</i> </strong><hr>
-          <a href="#" class="fa fa-linkedin fa-2x ic3" aria-hidden="true"></a>
-          <a href="#" class="fa fa-rss fa-2x ic3" aria-hidden="true"></a>
-          <br>
-          </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 text-center bottom"id=majax>
+        <div class="col-lg-4 bottom"id=majax>
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
           1310 S 51st St Richmond, CA, 94804
@@ -415,6 +402,20 @@
            <i class="fa fa-map-marker"></i>
            <a class="map-link"onclick=loadDoc2()>Map</a>
         </div>
+
+        <div class="col-lg-4 text-center bottom">
+          <div class="final-card">
+            <div class="final-card-inner">
+
+          <img src="imgs/Laner.png" style="height:200px;"alt="">
+                <i>Serving quality driven builders since 1984</i>
+
+          <hr>
+          <p> <h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
+          </div>
+          </div>
+        </div>
+
 
 
         <div class="col-lg-4 text-center bottom">
