--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div data-aos="fade-up-left"class="col-md-4 text-center">
           <div class="sub-inner">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
-            <h1>Subscribe to our newsletter!</h1>
+            <h1>Join our mailing list!</h1>
             <form class="news" action="index.html" method="post">
               <input type="text" name="" value=""placeholder="Name">
               <input type="email" name="" value=""placeholder="E-mail">
