revert footer, ease gradient, dropdowns, projects

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- First Page + Title -->
     <div class="scroll blur">
       <div class="title">
-        <a href="#"class="navbar-left"><img src="imgs/Laner.png" id=logo0 alt=""height=220px> </a>
+        <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""height=220px> </a>
         <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
@@ -108,9 +108,13 @@
                 <input type="text" class="order-field" name="Account number" value="" placeholder="Account Number" id="customer"disabled>
                 <select name="Customer Type" id="select_field" onchange="customerSelect()" required>
                   <option value="select a value" disabled selected>Please Select</option>
-                  <option value="Will-Call">Will Call</option>
                   <option value="Customer_account">Customer Account</option>
                   <option value="Guest">Guest</option>
+                </select>
+                <select name="Order Type" id="" required>
+                  <option value="select a value" disabled selected>Please Select</option>
+                  <option value="Customer_account">Will Call</option>
+                  <option value="Guest">Delivery</option>
                 </select>
                 <label>
                  Upload an attachment:
@@ -191,7 +195,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Long-term</strong> inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
+              <li><strong>Long-term inside and outside sales</strong> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
             </div>
           </div>
         </div>
@@ -204,7 +208,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Experienced</strong> personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
+              <li><strong>Experienced personnel</strong> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
             </div>
           </div>
         </div>
@@ -217,7 +221,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Long-term</strong> trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
+              <li><strong>Long-term trading relationships</strong> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
             </div>
         </div>
       </div>
@@ -279,45 +283,45 @@
       <div class="row justify-content-center">
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 1</h4>
-            <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>New Natural Resources HQ</h4>
+            <p><strong>Sacramento, CA</strong> - Redwood Electric group & Turner Construction</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 2</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>SFMTA Phase 2</h4>
+          <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 3</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>Transbay Transit Center</h4>
+          <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 4</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>706 Mission Project</h4>
+          <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
         </div>
       </div>
       <div data-aos="flip-left"class="row justify-content-center">
         <div class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 5</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>Nellis Air Force Base</h4>
+          <p><strong>Las Vegas, NV</strong> - Nova Group</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 6</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>Travis Air Force Base</h4>
+          <p><strong>Fairfield, CA</strong> - Nova Group</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 7</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>Bayview Opera House, Ruth Williams Memorial Theatre</h4>
+          <p><strong>San Francisco, CA</strong> - Woo Electric</p>
         </div>
         <div data-aos="flip-left"class="col-md-2 project-card">
           <img src="projects/Proj1.jpg" alt="">
-          <h4>Project 8</h4>
-          <p>Some text about project xyz. Completed in 20XX</p>
+          <h4>UCSF Genentech Hall</h4>
+          <p><strong>San Francisco, CA</strong> - Woo Electric</p>
         </div>
       </div>
     </div>
@@ -340,9 +344,9 @@
             <div class="carousel-item">
               <div class="d-block w-100">
                 <h1>Certifications</h1><br>
-                <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="150h3px"></a>
-                <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="120h3px"></a>
-                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="150h3px"></a>
+                <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="120h3px"></a>
+                <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
+                <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="120h3px"></a>
 
               </div>
             </div>
@@ -383,11 +387,23 @@
 
 
     <div class="end">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row end-area">
 
+        <div class="col-lg-4 text-center bottom">
+          <div class="final-card">
+            <div class="final-card-inner">
 
-        <div class="col-lg-4 bottom"id=majax>
+          <img src="imgs/laner-white.png" style="height:200px;"alt="">
+                <i>Serving quality driven builders since 1984</i>
+
+          <hr>
+          <p> <h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
+          </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 text-center bottom"id=majax>
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
           1310 S 51st St Richmond, CA, 94804
@@ -403,18 +419,7 @@
            <a class="map-link"onclick=loadDoc2()>Map</a>
         </div>
 
-        <div class="col-lg-4 text-center bottom">
-          <div class="final-card">
-            <div class="final-card-inner">
 
-          <img src="imgs/Laner.png" style="height:200px;"alt="">
-                <i>Serving quality driven builders since 1984</i>
-
-          <hr>
-          <p> <h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
-          </div>
-          </div>
-        </div>
 
 
 
