anchor points, header color

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#two">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="#about">About</a>
-          <a class="nav-item nav-link" href="#">Projects</a>
+          <a class="nav-item nav-link" href="#projects">Projects</a>
 
           <!-- NAV DROPDOWN -->
           <li class="nav-item dropdown">
@@ -276,7 +276,7 @@
 
     </div>
 
-    <div class="project-section">
+    <div class="project-section"id="projects">
 
       <h1>Projects</h1>
     <div class="container-fluid">
