--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="covid">
       <div class="inner-cv nmob">
         <h4>Due to the ongoing Corona Virus pandemic,</h4>
-
         Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.
         <ul>
           <li>Masks or face shields are required.</li>
@@ -27,8 +26,6 @@
           <li>Monday thru Friday: 7AM-3PM</li>
         </ul>
         We thank you for your cooperation and understanding during these uncertain times.
-
-
         <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
       </div>
     </div>
@@ -129,8 +126,7 @@
       </div>
     </div>
 
-
-
+    <!-- First intro sec + order + login -->
     <div class="container sec1 blur">
       <div class="row blur">
         <div data-aos="fade-up"class="col-md-6 col-centered est">
@@ -142,9 +138,7 @@
             <form class="" action="#" method="post">
               <input type="button" class="btn place"name="ord"value="PLACE AN ORDER">
             </form>
-
           </div>
-
         </div>
         <div data-aos="fade-up" class="col-md-6 col-centered">
           <div class="login">
@@ -165,13 +159,12 @@
 
 
 
-    <!-- Third Page/Section, affils + certs -->
+    <!-- Third Page/Section, affils + certs + projs-->
     <div class="scroll2 blur"></div>
     <div class="about-us big"id="about">
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid big">
-
       <div class="row justify-content-center" id="dyn">
 
         <!-- CARD -->
@@ -227,6 +220,7 @@
       </div>
     </div>
 
+    <!-- Corporate resp + news sec -->
     <div class="row justify-content-center">
       <div class="col-md-4 xtr">
         <h3>Corporate Social Responsibility</h3>
@@ -273,61 +267,60 @@
         </div>
       </div>
     </div>
-
     </div>
 
+    <!-- Projects sec -->
     <div class="project-section"id="projects">
-
       <h1>Projects</h1>
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>New Natural Resources HQ</h4>
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>New Natural Resources HQ</h4>
             <p><strong>Sacramento, CA</strong> - Redwood Electric group & Turner Construction</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>SFMTA Phase 2</h4>
+            <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>Transbay Transit Center</h4>
+            <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>706 Mission Project</h4>
+            <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
+          </div>
         </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>SFMTA Phase 2</h4>
-          <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
-        </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>Transbay Transit Center</h4>
-          <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
-        </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>706 Mission Project</h4>
-          <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
-        </div>
-      </div>
-      <div data-aos="flip-left"class="row justify-content-center">
-        <div class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>Nellis Air Force Base</h4>
-          <p><strong>Las Vegas, NV</strong> - Nova Group</p>
-        </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>Travis Air Force Base</h4>
-          <p><strong>Fairfield, CA</strong> - Nova Group</p>
-        </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>Bayview Opera House, Ruth Williams Memorial Theatre</h4>
-          <p><strong>San Francisco, CA</strong> - Woo Electric</p>
-        </div>
-        <div data-aos="flip-left"class="col-md-2 project-card">
-          <img src="projects/Proj1.jpg" alt="">
-          <h4>UCSF Genentech Hall</h4>
-          <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+        <div data-aos="flip-left"class="row justify-content-center">
+          <div class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>Nellis Air Force Base</h4>
+            <p><strong>Las Vegas, NV</strong> - Nova Group</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>Travis Air Force Base</h4>
+            <p><strong>Fairfield, CA</strong> - Nova Group</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>Bayview Opera House, Ruth Williams Memorial Theatre</h4>
+            <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+          </div>
+          <div data-aos="flip-left"class="col-md-2 project-card">
+            <img src="projects/Proj1.jpg" alt="">
+            <h4>UCSF Genentech Hall</h4>
+            <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+          </div>
         </div>
       </div>
     </div>
-    </div>
 
-
+    <!-- Jumbotron Carousel -->
     <div class="jumbotron bg-white jumbotron-fluid">
       <div class="container">
         <h1 class="display-4"></h1>
@@ -347,7 +340,6 @@
                 <a href="https://www.sba.gov/"><img class='car'src="imgs/SBA 8A.jpg" width="120h3px"></a>
                 <a href="https://www.nglcc.org/"><img class='car'src="imgs/NGLCC.png" height="100h3px"></a>
                 <a href="https://caleprocure.ca.gov/pages/sbdvbe-index.aspx"><img class='car'src="imgs/SBE LOGO.jpg" width="120h3px"></a>
-
               </div>
             </div>
           </div>
@@ -365,9 +357,8 @@
 
 
 
-    <!-- Fourth page/section Google Maps Api and Contactus form -->
+    <!-- Mail sub sec -->
     <div class="scroll3"></div>
-
     <div class="container-fluid Subscribe">
       <div class="row justify-content-center">
         <div data-aos="fade-up-left"class="col-md-4 text-center">
@@ -380,49 +371,43 @@
               <input type="button" name="" class="btn" value="Sign me up!">
             </form>
           </div>
-
         </div>
-        </div>
-        </div>
+      </div>
+    </div>
 
-
+    <!-- Final page/section Google Maps Api and Contact us form -->
     <div class="end">
     <div class="container-fluid">
       <div class="row end-area">
-
+        <!-- Footer logo -->
         <div class="col-lg-4 text-center bottom">
           <div class="final-card">
             <div class="final-card-inner">
-
-          <img src="imgs/laner-white.png" style="height:200px;"alt="">
-                <i>Serving quality driven builders since 1984</i>
-
-          <hr>
-          <p> <h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
-          </div>
+              <img src="imgs/laner-white.png" style="height:200px;"alt="">
+              <br>
+              <i>Serving quality driven builders since 1984</i>
+              <hr>
+              <p><h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
+            </div>
           </div>
         </div>
-
+        <!-- Visit us -->
         <div class="col-lg-4 text-center bottom"id=majax>
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
-          1310 S 51st St Richmond, CA, 94804
-          <br>
-          <i class="fa fa-phone"aria-hidden="true"></i>
-          <h5>Main Line</h5>
-          (510) 215-5100 <br>
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
-          <h5>Hours</h5>
-           Mon-Fri, 7am-4:30pm
-           <br>
-           <i class="fa fa-map-marker"></i>
-           <a class="map-link"onclick=loadDoc2()>Map</a>
+            1310 S 51st St Richmond, CA, 94804
+            <br>
+            <i class="fa fa-phone"aria-hidden="true"></i>
+            <h5>Main Line</h5>
+            (510) 215-5100 <br>
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+            <h5>Hours</h5>
+            Mon-Fri, 7am-4:30pm
+            <br>
+            <i class="fa fa-map-marker"></i>
+            <a class="map-link"onclick=loadDoc2()>Map</a>
         </div>
-
-
-
-
-
+        <!-- Contact form -->
         <div class="col-lg-4 text-center bottom">
           <div class="contact">
             <i class="fa fa-address-card" aria-hidden="true"></i>
@@ -438,18 +423,17 @@
       </div>
     </div>
     </div>
-
-
-
+    <!-- Footer -->
     <footer>
       <strong><i>Powered by <a href="https://eliascz.dev">Eliascz.dev</a></i></strong>
     </footer>
-
+    <!-- Deps -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/422646b9f5.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="scripts/main.js"type="text/javascript"></script>
+    <!-- Anim on scroll do not remove -->
     <script>
       AOS.init();
     </script>
