overflow on proj testing

--- a/index.html
+++ b/index.html
@@ -230,39 +230,19 @@
         <h3>News & Media</h3>
         <div class="news_over">
           <div class="article">
-            <h4>A headline</h4>
-            <p>Some text about headline. <br>mm/dd/yyyy</p>
-            <a href="#0">more..</a>
+            <h4>Caltrans Exceeds Small Business Goals</h4>
+            <p>Caltrans put more small, disadvantaged and disabled-veteran businesses to work in 2019 than ever before in its history.. <br>Spring 2020</p>
+            <a href="https://dot.ca.gov/programs/public-affairs/mile-marker/spring-2020/disadvantaged-business">more..</a>
             <hr>
           </div>
 
           <div class="article">
-            <h4>A headline</h4>
-            <p>Some text about headline. <br>mm/dd/yyyy</p>
-            <a href="#0">more..</a>
+            <h4>Representing Diversity</h4>
+            <p>Caltrans is spotlighting Disadvantaged Business Enterprise: Laner Electric Supply Co., Inc. during Pride Month.. <br>6/16/2020</p>
+            <a href="https://dot.ca.gov/-/media/dot-media/programs/civil-rights/documents/success-stories/lgbt-represnting-diversity-a11y.pdf">more..</a>
             <hr>
           </div>
 
-          <div class="article">
-            <h4>A headline</h4>
-            <p>Some text about headline. <br>mm/dd/yyyy</p>
-            <a href="#0">more..</a>
-            <hr>
-          </div>
-
-          <div class="article">
-            <h4>A headline</h4>
-            <p>Some text about headline. <br>mm/dd/yyyy</p>
-            <a href="#0">more..</a>
-            <hr>
-          </div>
-
-          <div class="article">
-            <h4>A headline</h4>
-            <p>Some text about headline. <br>mm/dd/yyyy</p>
-            <a href="#0">more..</a>
-            <hr>
-          </div>
 
         </div>
       </div>
@@ -361,7 +341,7 @@
     <div class="scroll3"></div>
     <div class="container-fluid Subscribe">
       <div class="row justify-content-center">
-        <div data-aos="fade-up-left"class="col-md-4 text-center">
+        <div data-aos="fade-in"class="col-md-4 text-center">
           <div class="sub-inner">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
             <h1>Join our mailing list!</h1>
