changes to data attr on mobile.

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
           </div>
         </div>
-        <div data-aos="flip-left"class="row justify-content-center">
+        <div data-aos=""class="row justify-content-center">
           <div class="col-md-2 project-card">
             <img src="projects/Proj1.jpg" alt="">
             <h4>Nellis Air Force Base</h4>
