changes to logo sizing mob

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- First Page + Title -->
     <div class="scroll blur">
       <div class="title">
-        <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""height=220px> </a>
+        <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""> </a>
         <h1 id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
         <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
